# vapordb

./: Cargo.toml  README.md  vapordb.wal
cli/: Cargo.toml  test.wal
cli/src/: main.rs  utils.rs
cli/src/commands/: get.rs  hash.rs  list.rs  set.rs  start.rs  string.rs
cli/sstables/: 1750085256.sst
cli/tests/: integration.rs
core/: Cargo.toml  vapordb_test_ttl_persistence.wal
core/src/: command.rs  db.rs  error.rs  lib.rs  ttl.rs  ttl_daemon.rs
core/src/storage/: memtable.rs  mod.rs  sst.rs  value.rs
core/src/wal/: wal.rs
core/tests/: integration.rs
frontend/: package-lock.json  package.json  tailwind.config.cjs
frontend/src/: app.css
frontend/src/lib/: Footer.svelte  Navbar.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
server/: Cargo.toml
server/src/: api.rs  handler.rs  lib.rs  main.rs  server.rs
server/tests/: integration.rs
