[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
core = { path = "../core" } 