[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"         # For binary serialization (used in WAL, snapshots)
chrono = "0.4"          # For TTL and timestamps
uuid = { version = "1", features = ["v4"] }  # (Optional) For WAL file IDs
log = "0.4"             # Logging